# extra

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
.zed/: tasks.json
cmake/: CompilationDatabase.cmake  FetchGoogleTest.cmake  PreventInSouceBuilds.cmake
include/: extra.hpp
include/extra/: CMakeLists.txt  args.hpp  atomic_flags.hpp  debug.hpp  enum_flags.hpp  extra.hpp  hash_combine.hpp  overload.hpp  overloaded.hpp  synch.hpp  trait.hpp  tuple_algorithm.hpp  variant_alternative.hpp  variant_visitor.hpp
src/: lib.cpp
tests/: CMakeLists.txt  sandbox.cpp
tests/extra/: CMakeLists.txt  enum_flags.test.cpp  synch.test.cpp
tests/trait/: abuse_nested_types.cpp  adl_bridge.cpp  regular_specialization.cpp  trait_from_adl_bridge.cpp  trait_from_nested_types.cpp  trait_from_specialization.cpp  transparent_call.cpp
